--- a/time.css
+++ b/time.css
@@ -43,10 +43,11 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  height: 6vw;
-  padding: 2vw;
+  height: clamp(0.5rem, 0.25rem + 2.5vh, 5rem);
+  padding: 1vw;
   text-align: left;
-  font-size: 5vw;
+  font-size: clamp(0.5rem, 0.2rem + 2vh, 4rem);
+  font-weight: bold;
 }
 
 #time {
@@ -57,7 +58,7 @@ header {
 }
 
 #time #erinn-time {
-  font-size: 34vw;
+  font-size: clamp(4rem, 2rem + 10vh, 34rem);
   font-weight: bold;
 }
 
